--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,7 +1,7 @@
 //Import fonts
-/*
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900|Roboto+Condensed&subset=cyrillic');
+/*@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700&subset=cyrillic');*/
 
+/*
 //@font-face {
 //    font-family: FontNameExample;
 //    src: url(../fonts/FontUrlExample.ttf);
