--- a/src/styles/theme/article.less
+++ b/src/styles/theme/article.less
@@ -41,7 +41,7 @@
 // ========================================================================
 
 .hook-article-title() {
-    font-weight: 700;
+    font-family: @font-lato-bold;
 }
 
 
