--- a/src/styles/theme/card.less
+++ b/src/styles/theme/card.less
@@ -92,7 +92,7 @@
 .hook-card() {
     display: block;
     min-height: 224px;
-    font-weight: 500;
+    font-family: @font-lato-medium;
     transition: box-shadow 0.1s ease-in-out;
 }
 
