--- a/src/styles/theme/form.less
+++ b/src/styles/theme/form.less
@@ -184,8 +184,8 @@
 
 .hook-form-label() {
   color: @form-label-color;
+  font-family: @font-lato-bold;
   font-size: @form-label-font-size;
-  font-weight: 700;
   text-transform: uppercase;
 }
 
