--- a/src/styles/theme/nav.less
+++ b/src/styles/theme/nav.less
@@ -74,7 +74,7 @@
 // ========================================================================
 
 .hook-nav-header() {
-  font-weight: 700;
+  font-family: @font-lato-bold;
 }
 
 
