--- a/src/styles/theme/pagination.less
+++ b/src/styles/theme/pagination.less
@@ -43,7 +43,7 @@
   transition: color 0.1s ease-in-out;
   padding: 6px 12px;
   border: 1px solid @global-muted-color;
-  font-weight: 700;
+  font-family: @font-lato-bold;
 }
 
 .hook-pagination-item-hover() {}
