--- a/src/styles/theme/subnav.less
+++ b/src/styles/theme/subnav.less
@@ -71,7 +71,7 @@
 
 .hook-subnav-pill-item() {
     line-height: @subnav-pill-item-line-height;
-    font-weight: 500;
+    font-family: @font-lato-medium;
     border: @subnav-pill-item-border-width solid @subnav-pill-item-color;
 }
 
