--- a/src/styles/fonts.less
+++ b/src/styles/fonts.less
@@ -10,17 +10,17 @@
     src: url(../fonts/Lato-Black.ttf);
 }
 
-@font-face {
+/*@font-face {
   font-family: Lato-BlackItalic;
   src: url(../fonts/Lato-BlackItalic.ttf);
-}
+}*/
 
 @font-face {
   font-family: Lato-Bold;
   src: url(../fonts/Lato-Bold.ttf);
 }
 
-@font-face {
+/*@font-face {
   font-family: Lato-BoldItalic;
   src: url(../fonts/Lato-BoldItalic.ttf);
 }
@@ -33,9 +33,9 @@
 @font-face {
   font-family: Lato-HairlineItalic;
   src: url(../fonts/Lato-HairlineItalic.ttf);
-}
+}*/
 
-@font-face {
+/*@font-face {
   font-family: Lato-Heavy;
   src: url(../fonts/Lato-Heavy.ttf);
 }
@@ -43,7 +43,7 @@
 @font-face {
   font-family: Lato-HeavyItalic;
   src: url(../fonts/Lato-HeavyItalic.ttf);
-}
+}*/
 
 @font-face {
   font-family: Lato-Italic;
@@ -55,27 +55,29 @@
   src: url(../fonts/Lato-Light.ttf);
 }
 
-@font-face {
+/*@font-face {
   font-family: Lato-LightItalic;
   src: url(../fonts/Lato-LightItalic.ttf);
-}
+}*/
 
 @font-face {
   font-family: Lato-Medium;
   src: url(../fonts/Lato-Medium.ttf);
 }
 
+/*
 @font-face {
   font-family: Lato-MediumItalic;
   src: url(../fonts/Lato-MediumItalic.ttf);
 }
+*/
 
 @font-face {
   font-family: Lato-Regular;
   src: url(../fonts/Lato-Regular.ttf);
 }
 
-@font-face {
+/*@font-face {
   font-family: Lato-Semibold;
   src: url(../fonts/Lato-Semibold.ttf);
 }
@@ -93,4 +95,4 @@
 @font-face {
   font-family: Lato-ThinItalic;
   src: url(../fonts/Lato-ThinItalic.ttf);
-}
+}*/
