--- a/src/styles/theme/text.less
+++ b/src/styles/theme/text.less
@@ -20,7 +20,7 @@
 @text-large-font-size: @global-large-font-size;
 @text-large-line-height: 1.5;
 
-@text-bold-font-weight: 700;
+@text-bold-font-weight: normal;
 
 @text-muted-color: @global-muted-color;
 @text-primary-color: @global-primary-background;
@@ -73,6 +73,14 @@
   font-size: 14px;
 }
 
+/* Weight modifier
+ ========================================================================== */
+
+.uk-text-bold {
+  font-family: @font-lato-medium;
+}
+
+
 // Background modifier
 // ========================================================================
 
@@ -100,7 +108,7 @@
  ========================================================================== */
 
 .uk-text-average {
-  font-weight: 500;
+  font-family: @font-lato-medium;
 }
 
 .uk-text-untransformed {
