--- a/src/styles/theme/variables.less
+++ b/src/styles/theme/variables.less
@@ -31,7 +31,15 @@
 // Typography
 //
 
-@global-font-family:                            'Lato', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+@font-lato-regular:                             Lato-Regular;
+@font-lato-light:                               Lato-Light;
+@font-lato-medium:                              Lato-Medium;
+@font-lato-bold:                                Lato-Bold;
+@font-lato-black:                               Lato-Black;
+@font-lato-italic:                              Lato-Italic;
+
+
+@global-font-family:                            @font-lato-regular, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 @global-font-size:                              16px;
 @global-line-height:                            1.4;      // 24px
 
