fonts fix / merge

--- a/src/styles/theme/variables.less
+++ b/src/styles/theme/variables.less
@@ -31,12 +31,11 @@
 // Typography
 //
 
-@font-lato-regular:                             Lato-Regular;
-@font-lato-light:                               Lato-Light;
-@font-lato-medium:                              Lato-Medium;
-@font-lato-bold:                                Lato-Bold;
-@font-lato-black:                               Lato-Black;
-@font-lato-italic:                              Lato-Italic;
+@font-lato-regular:                             'LatoWeb';
+@font-lato-light:                               'LatoWebLight';
+@font-lato-medium:                              'LatoWebMedium';
+@font-lato-bold:                                'LatoWebBold';
+@font-lato-black:                               'LatoWebBlack';
 
 
 @global-font-family:                            @font-lato-regular, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
