tm-purpose-list, tm-social in articles styled

--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -185,6 +185,33 @@ form {
   }
 }
 
+.tm-purpose-list {
+
+  li {
+    padding: 0 20px;
+    line-height: @global-control-small-height;
+    border: 1px solid @global-border;
+  }
+}
+
+.tm-articles-list {
+
+  .tm-social {
+
+    i {
+      font-size: 17px;
+      color: @global-color;
+      border-color: @global-border;
+      border-radius: 0;
+      transition: all 0.1s ease-in-out;
+    }
+
+    a:hover i {
+      border-color: @global-color;
+    }
+  }
+}
+
 //navbar
 
 .tm-pageheader {
