--- a/src/styles/theme/nav.less
+++ b/src/styles/theme/nav.less
@@ -8,7 +8,7 @@
 // ========================================================================
 
 @nav-item-padding-vertical:                     5px;
-@nav-item-padding-horizontal:                   0;
+@nav-item-padding-horizontal:                   10px;
 
 @nav-sublist-padding-vertical:                  5px;
 @nav-sublist-padding-left:                      15px;
