tab and articles  in blog html styles

--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -196,6 +196,11 @@ form {
 
 .tm-articles-list {
 
+  .uk-article {
+    padding: 30px;
+    border: 1px solid @global-border;
+  }
+
   .tm-social {
 
     i {
