--- a/src/styles/theme/alert.less
+++ b/src/styles/theme/alert.less
@@ -8,8 +8,8 @@
 // ========================================================================
 
 @alert-margin-vertical:                         @global-margin;
-@alert-padding:                                 @global-small-gutter;
-@alert-padding-right:                           @alert-padding + 14px;
+@alert-padding:                                 @global-gutter;
+@alert-padding-right:                           @global-gutter;
 @alert-background:                              @global-muted-background;
 @alert-color:                                   @global-color;
 
