--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -222,6 +222,13 @@ form {
   }
 }
 
+.tm-list-globe, .tm-list-count, .tm-list-arrow {
+
+  > li:nth-child(n+2), > li > ul {
+    margin-top: 20px;
+  }
+}
+
 .tm-list-globe {
 
   li {
@@ -240,9 +247,51 @@ form {
   }
 }
 
-.tm-list-count {}
+.tm-list-count {
+  counter-reset: item;
 
-//navbar
+  > li {
+    position: relative;
+    padding-left: 35px;
+
+    &::before {
+      content: counter(item);
+      counter-increment: item;
+      color: #fff;
+      text-align: center;
+      background-color: @global-orange;
+      border-radius: 50%;
+      position: absolute;
+      top: -1px;
+      left: 0;
+      min-width: 25px;
+      min-height: 25px;
+      padding: 0 5px;
+      line-height: 25px;
+      box-sizing: border-box;
+    }
+  }
+}
+
+.tm-list-arrow {
+  padding-left: 20px;
+
+  li {
+    position: relative;
+
+    &::before {
+      content: "\f054";
+      font-family: FontAwesome;
+      font-size: 14px;
+      color: @global-primary-background;
+      position: absolute;
+      top: 2px;
+      left: -20px;
+    }
+  }
+}
+
+  //navbar
 
 .tm-pageheader {
   min-height: 500px;
