--- a/src/styles/theme/text.less
+++ b/src/styles/theme/text.less
@@ -77,7 +77,7 @@
  ========================================================================== */
 
 .uk-text-bold {
-  font-family: @font-lato-medium;
+  font-family: @font-lato-bold;
 }
 
 
