--- a/src/styles/theme/variables.less
+++ b/src/styles/theme/variables.less
@@ -91,7 +91,7 @@
 //
 
 @global-small-box-shadow:                       0 0 6px 0 rgba(0, 0, 0, 0.15);
-@global-medium-box-shadow:                      0 5px 15px rgba(0,0,0,0.08);
+@global-medium-box-shadow:                      0 0 8px 0 rgba(0, 0, 0, 0.23);
 @global-large-box-shadow:                       0 14px 25px rgba(0,0,0,0.16);
 @global-xlarge-box-shadow:                      0 28px 50px rgba(0,0,0,0.16);
 
