--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -30,6 +30,13 @@ a.uk-light:hover {
   background-image: none;
 }
 
+.uk-dark {
+
+  .uk-close {
+
+  }
+}
+
 .uk-list ul.uk-iconnav {
   padding: 0;
   margin-left: -10px;
@@ -359,6 +366,7 @@ form {
 }
 
 //navbar
+
 header {
   z-index: 100;
 }
