--- a/src/styles/theme/text.less
+++ b/src/styles/theme/text.less
@@ -80,6 +80,10 @@
   font-family: @font-lato-bold;
 }
 
+.uk-text-black {
+  font-family: @font-lato-black;
+}
+
 
 // Background modifier
 // ========================================================================
