--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -31,9 +31,14 @@ a.uk-light:hover {
 }
 
 .uk-dark {
+  color: @global-color;
+
+  h1, h2, h3, h4, h5, h6 {
+    color: @global-emphasis-color;
+  }
 
   .uk-close {
-
+    color: @global-muted-color;
   }
 }
 
