+ Блок Новости в заголовке и в заголовках новостей шрифты чуть жирнее https://clip2net.com/s/3XyIfqF
+ Главная страницу кнопка Авиабилеты сделать как в дизайне щас какие то большие очень буквы https://clip2net.com/s/3XyMzlY

+/- НОВОЕ в блогах в дизайне так https://clip2net.com/s/3XyP2mN   а у вас так https://clip2net.com/s/3XyPapT

--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -428,6 +428,13 @@ header {
   }
 }
 
+//list
+.tm-news-list {
+  .uk-link-text {
+    font-family: @font-lato-bold;
+  }
+}
+
 // buttons
 .tm-button-text-small {
   font-size: @global-small-font-size;
