--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -115,6 +115,18 @@ form {
   }
 }
 
+.tm-grid-small {
+  margin-left: -4px;
+
+  > * {
+    padding-left: 4px;
+  }
+}
+
+.uk-grid + .tm-grid-small, .tm-grid-small > .uk-grid-margin, * + .uk-grid-margin-small {
+  margin-top: 6px;
+}
+
 .tm-input-shadow {
   border-color: #fff;
   box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.56), inset 0px 1px 2px 0 rgba(72, 114, 158, 0.61);
