+ В мобильной версии (7-10 айфоны смотрел) https://clip2net.com/s/3XyPuHK самый нижний блок про 20 новых страниц немного кривовато отображаются строки
Поиск попутчиков
+/- В фильтре поле «Поиск по тексту» шире сделать, как в макете. И уберите пожалуйста поле откуда, будет только поле КУДА.

+ ПОД слайдером в основной части странице есть три кнопки: Все страны, Попутчики из городов, По интересам  -   нужно в этих кнопках на один пиксель сдвинуть текст пониже https://clip2net.com/s/3XyT8qd  только на 1 пиксель!

+/- (кнопка ответить на нашем макете внутри серого фона) Сделать в объявлениях покомпактнее чтоб элементы располагались как в макете: https://clip2net.com/s/3XyTF6x  в частности кнопки ПОПУЧТКИ по интересам в один ряд должны быть точно, и иконки социальных сетей поближе друг к другу

сейчас так: https://clip2net.com/s/3XyTrtZ

- (отсутсвует в макете) И упустили в строке «Развернуть» про Источник момент должен быть https://clip2net.com/s/3XyTU1f

Добавление объявления о поиске попутчиков

+ В поле текст объявления сейчас с середины поля текст начинает писаться https://clip2net.com/s/3XyUc4A а нужно чтоб скраю
Блоги
+ В филь те сделать чуть по шире поле поиска сейчас совсем узкое, как в матке постарайтесь https://clip2net.com/s/3XyUMCg

--- a/src/styles/theme/button.less
+++ b/src/styles/theme/button.less
@@ -7,7 +7,7 @@
 // ========================================================================
 
 @button-line-height: @global-control-height - (@button-border-width * 2);
-@button-small-line-height: @global-control-small-height - (@button-border-width * 2);
+@button-small-line-height: 32px - (@button-border-width * 2);
 @button-large-line-height: @global-control-large-height - (@button-border-width * 2);
 
 @button-font-size: @global-font-size;
@@ -167,6 +167,7 @@
 
 .hook-button-small() {
   text-transform: @button-small-text-transform;
+  padding-top: 2px;
 }
 
 .hook-button-large() {
