--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -260,13 +260,11 @@ form {
         content: '\f0a3';
         display: inline-block;
         position: absolute;
-        top: 50%;
         left: 0;
-        line-height: normal;
+        line-height: 25px;
         font-family: FontAwesome;
         font-size: 13px;
         color: #aba4a4;
-        transform: translateY(-50%);
       }
     }
 
@@ -541,6 +539,10 @@ header {
 // social buttons
 .tm-social {
 
+  > * {
+    padding-left: 5px;
+  }
+
   i {
     width: 34px;
     height: 34px;
@@ -553,13 +555,26 @@ header {
   }
 }
 
+.social-likes {
+  min-height: auto;
+  margin: 0;
+  line-height: inherit;
+}
+
+.social-likes__widget {
+  margin: 0 5px 0;
+  padding: 0 10px;
+  border-radius: 500px;
+}
+
+
 // text
 .tm-line-height-big {
   line-height: 2;
 }
 
 .tm-image-shadow {
-  box-shadow: inset 0 -100px 80px -40px #fff;
+  box-shadow: inset 0 -80px 80px -40px #fff;
 
   img {
     position: relative;
