--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -434,6 +434,7 @@ form {
 .tm-marked {
   padding-left: 35px;
 }
+
 .tm-marked-orange {
   position: relative;
 
@@ -466,6 +467,12 @@ form {
     left: -35px;
     bottom: 0;
   }
+}
+
+
+
+.tm-airline-title {
+  font-size: 20px;
 }
 
 //navbar
