--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -508,6 +508,11 @@ header {
   background-size: cover;
 }
 
+.tm-pageheader-airlines {
+  background: url("../../images/header_bg_airlines.jpg") no-repeat center;
+  background-size: cover;
+}
+
 .tm-navbar-active {
   background-color: @global-primary-background;
 }
