--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -170,6 +170,7 @@ form {
       left: 15px;
       width: 20px;
       height: 20px;
+      line-height: 20px;
       font-family: FontAwesome;
       color: @global-blue;
       border: solid 1px @global-blue;
