airline-inner add

--- a/src/styles/theme/button.less
+++ b/src/styles/theme/button.less
@@ -341,6 +341,16 @@
   }
 }
 
+.uk-button-simple-blue {
+  color: @global-blue;
+  border: solid 1px @global-blue;
+
+  &:hover {
+    background-color: darken(@global-blue, 10%);
+    color: @global-inverse-color;
+  }
+}
+
 .uk-button-white {
   box-shadow: 0 0 5px 0 rgba(43, 2, 2, 0.13);
   background-color: #fff;
