--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -265,6 +265,15 @@ form {
 
   // content
 
+.tm-hr {
+  border-top: 1px solid #d8d8d8;
+}
+
+.tm-panel-bordered {
+  padding: 30px 25px;
+  border: 1px solid @global-border;
+}
+
 .tm-companion-item {
 
   h4 {
