--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -269,6 +269,12 @@ form {
   border-top: 1px solid #d8d8d8;
 }
 
+.tm-width-215 {
+  width: 215px;
+  max-width: 100%;
+  box-sizing: border-box;
+}
+
 .tm-panel-bordered {
   padding: 30px 25px;
   border: 1px solid @global-border;
