--- a/src/styles/theme/column.less
+++ b/src/styles/theme/column.less
@@ -7,8 +7,8 @@
 // Variables
 // ========================================================================
 
-@column-gutter:                                 @global-gutter;
-@column-gutter-l:                               @global-medium-gutter;
+@column-gutter:                                 @global-small-gutter;
+@column-gutter-l:                               @global-gutter;
 
 @column-divider-rule-color:                     @global-border;
 @column-divider-rule-width:                     1px;
