blogs-interesting add and adaptive

--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -305,6 +305,25 @@ form {
   border: 1px solid @global-border;
 }
 
+.tm-card {
+  min-height: 227px;
+  padding: 15px 20px;
+  font-size: 18px;
+}
+
+.tm-card-small {
+  min-height: 162px;
+  padding: 10px 20px;
+  font-size: 16px;
+}
+
+.tm-card-large {
+  min-height: 344px;
+  padding: 15px 20px;
+  font-size: 22px;
+  line-height: 1;
+}
+
 .tm-companion-item {
 
   h4 {
