--- a/src/styles/theme/description-list.less
+++ b/src/styles/theme/description-list.less
@@ -16,10 +16,9 @@
 //
 // New
 //
-// not sure is it new or not
-@description-list-term-font-size:                      @global-small-font-size;
+@description-list-term-font-size:                      14px;
 @description-list-term-font-weight:                    normal;
-@description-list-term-text-transform:                 uppercase;
+@description-list-term-text-transform:                 none;
 
 
 // Component
